# CSCBE-2024-WRITE-UPS

./: README.md
Binary exploitation/Bookstore/: README.md  challenge.yml
Binary exploitation/Grandpa Hubert's Jail/: README.md  challenge.yml
Binary exploitation/Green Revolution/: README.md  challenge.yml
Binary exploitation/Unbeatable Tic Tac Toe/: README.md  challenge.yml
Crypto/Additional Problems/: README.md  challenge.yml
Crypto/Blockchain/: README.md  challenge.yml
Crypto/Forever remembered - missed/: README.md  challenge.yml
Crypto/Glutton/: README.md  challenge.yml
Crypto/Grandma Mireille's final vault/: README.md  challenge.yml
Crypto/Grandma Mireille's first vault/: README.md  challenge.yml
Crypto/Grandma Mireille's third vault/: README.md  challenge.yml
Crypto/Grandpa Hubert's grandson/: README.md  challenge.yml
Crypto/Majorette Emergency/: README.md  challenge.yml
DNS/Archery/: README.md  challenge.yml
DNS/ThisIsTheFlag Scavenger Hunt/: README.md  challenge.yml
DNS/ThisIsTheFlag Treasure Hunt/: README.md  challenge.yml
Forensics/Bad Ransomware/: README.md  challenge.yml
Forensics/Business Gnocchi/: README.md  challenge.yml
Forensics/Deduction Deduce/: README.md  challenge.yml
Forensics/Get rich fast/: README.md  challenge.yml
Forensics/Hidden Secrets/: README.md  challenge.yml
Misc/OutOfBounds/Challenge/Private/server/: .dockerignore  Cargo.toml  client.py  readme.md  test.py
Misc/OutOfBounds/Challenge/Private/server/certs/: cert.pem  key.pem
Misc/OutOfBounds/Challenge/Private/server/src/: main.rs
(+575 files in other folders)
