[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-throttle = "0.3.2"
async-trait = "0.1.78"
axum = { version = "0.7.4", features = ["json"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
http = "1.1.0"
json = "0.12.4"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
time = "0.3.34"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = {version= "0.5.2", features = ["trace"]}
tower-sessions = "0.11.0"
tower_governor = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
